style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Space Mono", monospace;
}
.container {
  display: flex;
  width: 100vw;
  height: 100vh;
  justify-content: center;
  align-items: center;
  background-color: #c5e4e7;
}
.page-width {
  max-width: 1400px;
  width: 100%;
  display: inherit;
  flex-direction: column;
  align-items: center;
}
.col-one-half {
  flex: 1 0 calc(50% - 1rem);
  width: 100%;
  height: auto;
}
.logo-wrapper {
  margin-bottom: 2rem;
}
.calculator-wrapper {
  background-color: #ffff;
  border-radius: 1rem;
  max-width: 80%;
  display: flex;
  justify-content: space-around;
  align-items: stretch;
  flex-wrap: wrap;
  box-shadow: #0000002e 0px 0px 15px 0px;
  padding: 2rem;
  gap: 2rem;
}
.input-group {
  display: block;
  width: 100%;
  position: relative;
}
.input-logo {
  width: inherit;
  position: inherit;
}
.input-logo .icon {
  position: absolute;
  left: 0;
  top: 0;
  display: flex;
  align-items: center;
  height: 100%;
  margin-left: 1rem;
}
.input-logo input {
  width: inherit;
  border: 0;
  height: 2.5rem;
  background-color: #f3f8fb;
  text-align: right;
  padding: 0 0.75rem;
  font-size: 24px;
}
.form-wrapper {
  padding: 1rem 0;
}
.form-wrapper label {
  color: #6a7879;
  font-size: 0.85rem;
  font-weight: 700;
  margin-bottom: 1rem;
  display: block;
}
.buttons-group {
  margin: 2rem 0;
}
.buttons-wrapper {
  display: grid;
  grid-template-columns: repeat(3, minmax(160px, 1fr));
  grid-gap: 1rem;
}
.buttons-wrapper .button-wrapper {
  display: inline-block;
}
.button-wrapper input[type="radio"] {
  display: none;
}
.button-wrapper input[type="radio"] + label {
  display: block;
  width: 100%;
  margin-bottom: 0;
}
.button-wrapper input[type="radio"] + label span {
  display: inline-block;
  width: 100%;
  cursor: pointer;
  background-color: #00474b;
  padding: 1rem 0.5rem;
  text-align: center;
  font-size: 20px;
  color: #fff;
}
.button-wrapper input[type="radio"]:checked + label span {
  background-color: #26c2ad;
}
.custom-tip {
  display: none;
  width: 100%;
  height: 100%;
  padding: 1rem 0.5rem;
  font-size: 20px;
  border: 0;
  text-align: right;
  background-color: #f3f8fb;
}
.button-wrapper-custom input[type="radio"]:checked + label span {
  display: none;
}
.button-wrapper-custom input[type="radio"]:checked ~ .custom-tip {
  display: block;
}
.wrapper-results {
  background: #00474b;
  height: 100%;
  border-radius: 10px;
  padding: 2rem;
  display: flex;
  flex-wrap: wrap;
}
.result {
  width: 100%;
  display: inherit;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 2rem;
}
.content p {
  font-weight: bold;
  color: #fff;
}
.content small {
  color: #26c2ad;
  font-weight: bold;
}
.price {
  font-size: 2.25rem;
  color: #26c2ad;
  font-weight: bold;
}
.button-wrapper {
  align-self: end;
  width: 100%;
}
.btn-reset {
  padding: 1rem;
  text-transform: uppercase;
  border: 0;
  color: #00474b;
  background-color: #26c2ad;
  width: inherit;
  font-weight: bold;
  cursor: pointer;
}
.btn-reset[disabled] {
  background-color: #0d686d;
  color: #00474b;
}
.warning {
  position: absolute;
  top: 0;
  right: 0;
  font-weight: bold;
}
.hidden {
  display: none;
}
@media screen and (max-width: 749px) {
  .container {
    align-items: end;
  }
  .calculator-wrapper {
    max-width: 100%;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
  }
  .col-one-half {
    flex: 0 1 100%;
  }
  .buttons-wrapper {
    grid-template-columns: repeat(2, 1fr);
  }
  .form-wrapper {
    padding: 0;
  }
  .price {
    font-size: 2rem;
  }
}

